# python_modules

mod00/ex1/: ft_garden_name.py
mod00/ex4/: ft_plant_age.py
mod00/ex6/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
mod00/ex7/: ft_seed_inventory.py
mod01/ex0/: ft_garden_intro.py
mod01/ex1/: ft_garden_data.py
mod01/ex2/: ft_plant_growth.py
mod01/ex3/: ft_plant_factory.py
mod01/ex4/: ft_garden_security.py
mod01/ex5/: ft_plant_types.py
mod01/ex6/: ft_garden_analytics.py
mod02/ex0/: ft_first_exception.py
mod02/ex1/: ft_raise_exception.py
mod02/ex2/: ft_different_errors.py
mod02/ex3/: ft_custom_errors.py
mod02/ex4/: ft_finally_block.py
mod03/ex0/: ft_command_quest.py
mod03/ex1/: ft_score_analytics.py
mod03/ex2/: ft_coordinate_system.py
mod03/ex3/: ft_achievement_tracker.py
mod03/ex4/: ft_inventory_system.py
mod03/ex5/: ft_data_stream.py
mod03/ex6/: ft_data_alchemist.py
mod04/ex0/: .ft_ancient_text.py.swp  ft_ancient_text.py
mod04/ex1/: ft_archive_creation.py
mod04/ex2/: ft_stream_management.py
mod04/ex3/: ft_vault_security.py
mod05/ex0/: data_processor.py
mod05/ex1/: data_stream.py
mod05/ex2/: data_pipeline.py
mod06/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
mod07/: battle.py  capacitor.py  tournament.py
mod08/ex1/: loading.py  pyproject.toml
mod10/: en.subject.txt
(+29 files in other folders)
