[tool.poetry]
name = "ex1"
version = "0.1.0"
description = ""
authors = ["psilva-p <psilva-p@student.42lisboa.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "2.2.6"
pandas = "2.3.3"
matplotlib = "3.10.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"